<resources>
    <string name="app_name">NewsApp</string>
    <string name="header">The Brexit sausages row looks like stalemate unless Joe Biden can solve it</string>
    <string name="body">No matter how much everyone argues, you can’t fudge sausages. The UK and the EU are at loggerheads, specifically over chilled meats, but more generally over the infamous Northern Ireland protocol. And frankly, it’s hard to see a way out of the current impasse. It will be for future generations to figure out what Boris Johnson had in mind when it comes to the protocol he negotiated, signed and persuaded parliament to approve. Did he not know what it implied in terms of trade between Great Britain and Northern Ireland? Did he decide just to wing it, figuring that it would be enough to get him through the election he craved, with some “sandpapering” to smooth over any difficulties further down the line? Did he think the EU could be forced to cave? Did he sign it with no intention of implementing it, and damn the consequences? What really defies belief is chief negotiator David Frost’s claim that the EU’s “purist” approach to implementing the Brexit deal has surprised our government. I mean, what is the EU if not legalistic? For five long years, the British government did little but express some understandable frustration about rigid Brussels legalism. It’s a bit rich now to be coming out, effectively saying, “Oh my God, we didn’t think the EU would get all legalistic on us.” Anyway, we are where we are, and that is in a very tough spot. The UK has unilaterally delayed putting in place some of the measures the EU says the protocol implies (notably a ban on the export of chilled meat – including sausages – across the Irish Sea) and is threatening to delay still further. There are further arguments to come, as the grace periods end and – absent agreement on “technical” matters large and small – border checks begin on everything from food products and parcels on 1 October, to medicines at the start of next year. The blunt fact is that the UK signed up to this agreement, and the EU has legitimate expectations that we will implement it. Yet both sides have a point. For the EU, incredulity is mixed with frustration. The incredulity comes with London’s refusal to honour its word and implement what is implied by the agreement it willingly signed up to. The frustration is due to the fact there is an easy way out of the current impasse. If the UK simply agreed to align with EU rules on animal and plant health – even on a temporary basis – the need for the vast majority of checks would simply evaporate. For the UK, such an outcome is unacceptable. For one thing, as Frost put it in a speech in Brussels in February 2020, the whole point of Brexit was to ensure the UK was free to make its own laws and would therefore refuse any automatic alignment with the EU (London would accept mutual recognition). Unionist fury at the protocol – which they see as putting Northern Ireland in the same economy (at least for goods) as the Republic of Ireland while distancing it from that of the UK – is real. Squaring this set of particularly circular circles is not going to be easy. Either sausages from Great Britain are allowed into Northern Ireland, or they are not. The UK argues, correctly, that there is currently no health issue here, as our rules are the same as those in place in the single market. The EU argues, also correctly, that that’s not the point. The UK does not formally abide by EU rules and so, quite aside from future risks to health should the UK decide to alter its standards, that’s just the price London has to pay for the sort of Brexit it has chosen to pursue. It is, to say the least, hard to see how this one can be sorted. Which immediately raises the prospect of escalation. EU law specialist Catherine Barnard has reminded us that the EU-UK Trade and Cooperation Agreement allows either party to “suspend obligations” under that treaty in the event of breaches of earlier agreements. For non-lawyers, that means impose trade sanctions for breaches of the withdrawal agreement of 2019, which contains the protocol. And the EU is very good at this sort of thing. In 2018, its retaliatory tariffs on the US saw key Republican heartlands such as Kentucky (home of then senate majority leader and Donald Trump ally Mitch McConnell) and Tennessee (home of Jack Daniel’s), particularly impacted by whiskey tariffs. We can be pretty certain that any action it takes against the UK would be calculated to cause political pain for the prime minister. Not that escalation by the EU is necessarily going to provide a solution. It might simply cause the UK to dig in, citing unreasonable Brussels heavy-handedness. And so, what are the alternatives? One is that the EU backs down. Using some magical formula of diplomacy, traceability and guillotine clauses, Brussels agrees there is no unmanageable health risk implied by chilled meats entering Northern Ireland, particularly if it can be established they go no further into the single market than that. The EU can make concessions when it wants to. Having told Theresa May it was unthinkable that Brussels would allow a non-member state to police its external border, it promptly agreed just that for the current protocol. Then there is the G7. President Biden’s public pronouncements on the row to date are redolent of a parent dealing with two squabbling children: “I don’t care who started it, stop it.” In private, EU officials maintain the US is not so balanced and points the finger squarely at the UK. If this really is the case then maybe a few quiet words might be enough to make the UK back down. We do, after all, have form. The offending illegal clauses of the internal market bill never made it into law. The EU ambassador is safely ensconced in London with the privileges he sought. What President Biden would propose to do about the unionist fury that would result from such an outcome is anyone’s guess. But maybe, just maybe, instead of butchering the trade deal he signed a few months ago, Boris Johnson will tell Northern Ireland it has to make do with fewer sausages. Anand Menon is director of The UK in a Changing Europe and professor of European politics and foreign affairs at King’s College London</string>
    <string name="author">Anand Menon</string>
    <string name="category">Opinion</string>
    <string name="year">2021</string>
    <string name="month">6</string>
    <string name="day">11</string>
    <string name="error">No News Available</string>
    <string name="connection">No Internet Connection</string>

    <string name="settings_page_size_label">Number Of Pages(1-10)</string>
    <string name="settings_page_size_key" translatable="false">min_magnitude</string>
    <string name="settings_page_size_default" translatable="false">10</string>
</resources>
